--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,20 +1,19 @@
+body *, body *::before, body *::after{
+  margin: 0;
+  border: 0;
+  font: inherit;
+  box-sizing: border-box;
+}
+//반응형 이미지
+img{
+  max-width: 100%;
+  height: auto;
+}
+
 body{
   font-family: "Spoqa Han Sans", sans-serif;
   font-weight: 400;
   font-size: rem(16px);
-}
-
-.container{
-  background-color: yellow;
-  @include boxFixed;
-}
-.header{
-  @include boxFixed;
-  background-color: red;
-  @include sm{
-    background-color: blueviolet;
-  }
-  @include md{
-    background-color: blue;
-  }
+  background-color: $default;
+  color: $text;
 }
