--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -46,13 +46,13 @@ $breakpoint: 768px; //테블릿 사이즈
 
 // 디바이스 크기에 따른 미디어쿼리
 @mixin sm {
- @media screen and (max-wdith: $breakpoint - 1) {
+ @media screen and (max-width: $breakpoint - 1) {
   @content;
  }
 }
 
 @mixin md {
- @media screen and (min-wdith: $breakpoint) {
+ @media screen and (min-width: $breakpoint) {
   @content;
  }
 }
