아이디 및 비밀번호 입력서식 디자인 완성

--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,17 @@ body *, body *::before, body *::after {
   box-sizing: border-box;
 }
 
+.a11yHidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  visibility: hidden;
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(50%);
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -451,6 +462,73 @@ body {
 
 .main {
   flex-grow: 1;
+}
+
+.loginForm legend {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  visibility: hidden;
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(50%);
+}
+
+.userEmail, .userPassword {
+  margin-bottom: 0.625em;
+}
+
+.formControlUser {
+  border: 1px solid #999999;
+  padding: 0.5625em;
+}
+.formControlUser:focus-within {
+  border-color: #03CF5D;
+}
+.formControl__input {
+  width: 100%;
+  padding: 0.3125em;
+}
+.formControl__input:focus {
+  outline: 0;
+  background-color: rgba(3, 207, 93, 0.05);
+}
+
+.errorMessage {
+  color: #FF1414;
+  display: none;
+}
+
+.is--invalid .errorMessage {
+  display: block;
+}
+
+.formControl__button {
+  text-align: center;
+  color: #FFFFFF;
+  font-weight: 700;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  background-color: #03CF5D;
+}
+@media screen and (max-width: 767px) {
+  .formControl__button {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .formControl__button {
+    width: 460px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
