--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -4,6 +4,12 @@ body *, body *::before, body *::after{
   font: inherit;
   box-sizing: border-box;
 }
+
+.a11yHidden{
+  @include a11y;
+}
+
+
 //반응형 이미지
 img{
   max-width: 100%;
