--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -10,7 +10,7 @@ $blackDark: #333333;
 
 $default: $white;
 $primary: $green;  //주색
-$secondary: $silverLight;  //부색
+$secondary: $silver;  //부색
 $text: $blackDark;
 //$accent: ;  강조색
 $alpha: $blackAlpha10;
