IP보안 디자인 완성

--- a/css/style.css
+++ b/css/style.css
@@ -474,6 +474,13 @@ body {
   clip: rect(0, 0, 0, 0);
   clip-path: inset(50%);
 }
+.loginForm__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-wrap: nowrap;
+}
 
 .userEmail, .userPassword {
   margin-bottom: 0.625em;
@@ -504,31 +511,61 @@ body {
   display: block;
 }
 
-.formControl__button {
-  text-align: center;
-  color: #FFFFFF;
+.userSelectInfo {
+  order: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-wrap: nowrap;
+}
+
+.ipSecurityLink {
+  margin-left: auto;
+  text-decoration: none;
+  color: inherit;
+}
+
+.ipSecurityCheckbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+}
+.ipSecurityCheckbox:checked + label::before {
+  content: "ON";
+  color: #03CF5D;
+}
+.ipSecurityCheckbox:focus + label::before {
+  box-shadow: 0 0 0 2px #24388d;
+  border-radius: 2px;
+}
+.ipSecurityLabel {
+  outline: 0.125em solid inherit;
+}
+.ipSecurityLabel::before {
+  content: "OFF";
   font-weight: 700;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  text-align: right;
+  display: inline-block;
+  width: 2.25em;
+  padding: 0 0.25em;
+  margin-left: 0.5em;
+  color: #999999;
+  cursor: pointer;
+}
+
+.loginButton {
+  margin: 0.625em 0;
   background-color: #03CF5D;
+  color: #FFFFFF;
 }
-@media screen and (max-width: 767px) {
-  .formControl__button {
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media screen and (min-width: 768px) {
-  .formControl__button {
-    width: 460px;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.loginButton .formControl__button {
+  background-color: inherit;
+  color: inherit;
+  width: 100%;
+  padding: 1.1875em 1em;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
