--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -1,3 +1,4 @@
+$blue: #24388d;
 $green: #03CF5D;
 $white: #FFFFFF;
 $silver: #999999;
@@ -15,3 +16,4 @@ $text: $blackDark;
 //$accent: ;  강조색
 $alpha: $blackAlpha10;
 $warning: $red;  //경고색
+$outline: $blue;
